--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,7 @@ report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
 
 # Compiled binary addons (https://nodejs.org/api/addons.html)
 build/Release
+
+# Images assets (temporary)
+build/img/*
+assets/img/*
